--- a/Contact.html
+++ b/Contact.html
@@ -4,20 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="./styles.css"/>    
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>AlyDev- Contact</title>
 </head>
 <body>
-    <form action="" method="get">
-        <h5 class="hometitle">Name and lastname</h5>
-        <input name="name" placeholder="Enter your name and lastname"/>
-        <h5>Your email</h5>
-        <input name="email" placeholder="Enter your email"/>
-        <h5>Your subject</h5>
-        <input name="subject" placeholder="What's your subject?"/>
-        <h5>Write your message</h5>
-        <textarea name="message" placeholder="Write your message here"></textarea>
-        <input type="submit" name="Send"/>
-    </form>
+    <div class="container-fluid">
+        <header>
+            <!--Row that will contain the header-->
+            <div class="row">
+                <!--Column to put the logo-->
+                <div class="col-lg">
+                    <a href="./Homepage.html">
+                        <h1 class="h1"
+                            style="font-family: Arial, Helvetica, sans-serif; color: #F3F4F6FF;  font-weight: 700;">
+                            AlyDev</h1>
+                    </a>
+                </div>
+                <!--Column to put the quick access bar menu-->
+                <div class="col-lg-4">
+                    <div class="header-menu">
+                        <a href="./AboutMe.html">
+                            <ul class="header-menu-item">About me</ul>
+                        </a>
+                        <a href="./Projects.html">
+                            <ul class="header-menu-item">My Projects</ul>
+                        </a>
+                        <a href="./Contact.html">
+                            <ul class="header-menu-item">Contact</ul>
+                        </a>
+                        <ul class="header-menu-item"><img class="lang_icons" alt="Esp"
+                                src="./images/spain_icon.png"></img></ul>
+                        <a href="./Homepage.html">
+                            <ul class="header-menu-item"><img class="lang_icons" alt="Eng"
+                                    src="./images/uk_icon.png"></img></ul>
+                        </a>
+                        <ul class="header-menu-item"><img class="lang_icons" alt="Por"
+                                src="./images/brazil_icon.png"></img></ul>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <main>
+            <br>
+            <!--h1 class from Bootstrap to customize the texts-->
+            <div>
+                <h1 class="h1" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF; margin-bottom: 5%;">
+                    Contact me</h1>
+            </div>
+            <div class="row justify-content-around align-items-top" style="margin-bottom: 5%;">
+                <div class="col">
+                    <h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">Main contact channels</h1>
+                    <div class="row row-cols-3">
+                        <div class="col-md-4"><a target="_blank" href="tel:+573123949192"><img class="contacticons" alt="WhatsApp" src="./images/bxl-whatsapp.svg"/></a></div>
+                        <div class="col-md-4"><img class="contacticons" alt="Mail" src="./images/mail_icon.svg"/></div>
+                        <div class="col-md-4"><a target="_blank" href="https://www.linkedin.com/in/alyson-valeria-castiblanco-casta%C3%B1eda/"><img class="contacticons" alt="Linkedin" src="./images/linkedin_icon.svg"/></a></div>
+                    </div>
+                </div>
+                <div class="col">
+                    <h3>Send me a message and contact with me.</h3>
+                    <form>
+                        <div class="mb-3">
+                            <label for="name" class="form-label" style="color: #ffffff;">Name and lastname</label>
+                            <input type="text" class="form-control" id="name" placeholder="Enter your name and lastname" required/>    
+                        </div>
+                        <div class="mb-3">
+                            <label for="email" class="form-label" style="color: #ffffff";>Your email</label>
+                            <input type="email" class="form-control" id="email" placeholder="example@mail.com" required/>    
+                        </div>
+                        <div class="mb-3">
+                            <label for="subject" class="form-label" style="color: #ffffff";>Your subject</label>
+                            <input type="text" class="form-control" id="subject" placeholder="What's your subject?" required/>    
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label" style="color: #ffffff";>Write your message</label>
+                            <textarea type="text" class="form-control" id="message" rows="3" placeholder="Write your message here"></textarea>    
+                        </div>
+                        <div style="display: flex; justify-content:right"><button type="submit" class="btn btn-primary">Send</button></div>
+                    </form>                
+                </div>
+            </div>
+            <footer>
+                <!--An additional row for the footer-->
+                <!--A flex box to adapt the content, with padding, contenf justified and aligned-->
+                <div class="d-flex flex-wrap justify-content-between align-items-stretch py-3 border-top">
+                    <!--Column for the email-->
+                    <div class="col-md-4 d-flex align-items-center">
+                        <img class="footericons" alt="mail" src="./images/mail_icon.svg" /></li>
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 0;">
+                            castiblanco.castaneda.alyson.val@gmail.com</p>
+                    </div>
+                    <!--Column for social media-->
+                    <div class="nav col-md-4 justify-content-end list-unstyled d-flex">
+                        <a target="_blank"
+                            href="https://www.linkedin.com/in/alyson-valeria-castiblanco-casta%C3%B1eda/"><img
+                                class="footericons" alt="Linkedin" src="./images/linkedin_icon.svg" /></a>
+                        <a target="_blank" href="https://github.com/ALYSONCASTIBLANCO"><img class="footericons"
+                                alt="GitHub" src="./images/github_icon.svg" /></a>
+                    </div>
+
+                </div>
+            </footer>            
+        </main>
+    </div>
 </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
