--- a/Homepage.html
+++ b/Homepage.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Inserting CSS Sheet for customized styles-->
     <link rel="stylesheet" href="styles.css"/>
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>AlyDev- HomePage</title>
 </head>
 <body>
