--- a/Projects.html
+++ b/Projects.html
@@ -10,6 +10,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!--Inserting CSS Sheet for customized styles-->
     <link rel="stylesheet" href="styles.css" />
+    <link rel="shortcut icon" href="./images/logo.png" type="image/x-icon">
     <title>AlyDev- My Projects</title>
 </head>
 
@@ -206,14 +207,77 @@
                         </p>
                         <p>HTML, CSS.</p>
                         <div style="display: flex; justify-content: right;"><a target="_blank"
-                                href="https://alysoncastiblanco.github.io/AlyDevProgrammingPage/myfirstpage.html"><img class="skillsicons"
-                                    alt="link" src="./images/link-alt-regular-24.png" /></a></div>
+                                href="https://alysoncastiblanco.github.io/AlyDevProgrammingPage/myfirstpage.html"><img
+                                    class="skillsicons" alt="link" src="./images/link-alt-regular-24.png" /></a></div>
                     </div>
                 </div>
             </div>
             <div id="educationprojects">
-                <h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF; padding-bottom: 2%;">
-                    Some of my Students Projects guided by me</h1>        
+                <h1 class="h2"
+                    style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF; padding-bottom: 2%;">
+                    Some of my Students Projects guided by me</h1>
+                <div id="carouselExampleCaptions" class="carousel slide">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                            aria-label="Slide 4"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./images/projects/education_projects/IMG-20240523-WA0002.jpg"
+                                class="d-block w-100" alt="Project">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>STEAM Project Plant Growth Detector</h5>
+                                <p>Project developed by 3rd, 4th and 5th grade students with Arduino and ultrasonic
+                                    sensor, projected on LCD screen with I2C, programmed in mBlock.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/projects/education_projects/IMG-20240523-WA0004.jpg"
+                                class="d-block w-100" alt="Project">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>STEAM Project Soil Moisture Detector</h5>
+                                <p>Project developed by 3rd, 4th and 5th grade students with Arduino and humidity
+                                    sensor, projected on LCD screen with I2C, programmed in mBlock.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./images/projects/education_projects/IMG-20240523-WA0006.jpg"
+                                class="d-block w-100" alt="Project">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>STEAM project animal feed dispenser</h5>
+                                <p>Project developed by 3rd, 4th and 5th grade students with Arduino and ultrasonic
+                                    sensor, generating dispensing through the movement of a servomotor, programmed in
+                                    mBlock.</p>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <video class="d-block w-100" controls>
+                                <source src="./images/projects/education_projects/Tech_Land.mp4" type="video/mp4">
+                            </video>
+                            <div class="carousel-caption d-none d-md-block">
+                                <h5>Technological city Robotics 2022</h5>
+                                <p>Project developed by Elementary School students in which we can see different applications like 
+                                    LED sequences using Arduino, light patterns using Halocode and simple electronics for carousels.</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
             </div>
             <footer>
                 <!--An additional row for the footer-->
@@ -239,5 +303,11 @@
     </div>
 
 </body>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+    crossorigin="anonymous"></script>
 
 </html>
