--- a/Contact.html
+++ b/Contact.html
@@ -51,7 +51,7 @@
             <!--h1 class from Bootstrap to customize the texts-->
             <div>
                 <h1 class="h1" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF; margin-bottom: 5%;">
-                    Contact me 111</h1>
+                    Contact me</h1>
             </div>
             <div class="row justify-content-around align-items-top" style="margin-bottom: 5%;">
                 <div class="col">
