--- a/AboutMe.html
+++ b/AboutMe.html
@@ -58,45 +58,43 @@
                     </div>
                 </div>
             </div>
-            <div id="education" style="margin-bottom: 5%;">
+            <div id="education" style="margin-top: 5%; margin-bottom: 5%;">
                 <h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">My
                     Education</h1>
             </div>
-            <div class="row" style="border-bottom: 3px solid #ffffff; margin-left: 1%; margin-right: 1%;">
-                <div class="col">
-                    <img class="book" alt="icon" src="./images/book-bookmark-regular-24.png" />
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Colombian High School Diploma</p>
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2014</p>
+            <div class="timeline">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <img class="book" alt="icon" src="./images/book-bookmark-regular-24.png" />
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Colombian High School Diploma</p>
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2014</p>
+                    </div>
                 </div>
-                <div class="col">
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <img class="ecci" alt="icon" src="./images/ecci.png" />
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Associate Degree Automation and
+                            industrial robotics</p>
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2018</p>
+                    </div>
                 </div>
-                <div class="col">
-                    <img class="utp" alt="icon" src="./images/utp.png" />
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">General Education Degree in Software
-                        development</p>
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2021</p>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <img class="utp" alt="icon" src="./images/utp.png" />
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">General Education Degree in Software
+                            development</p>
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2021</p>
+                    </div>
                 </div>
-                <div class="col">
-                </div>
-            </div>
-            <div class="row" style="margin-bottom: 5%;">
-                <div class="col">
-                </div>
-                <div class="col">
-                    <img class="ecci" alt="icon" src="./images/ecci.png" />
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Associate Degree Automation and
-                        industrial robotics</p>
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2018</p>
-                </div>
-                <div class="col">
-                </div>
-                <div class="col">
-                    <img class="ecci" alt="icon" src="./images/ecci.png" />
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Mechatronics Engineering Bachelor</p>
-                    <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2022</p>
+                <div class="timeline-item">
+                    <div class="timeline-content">
+                        <img class="ecci" alt="icon" src="./images/ecci.png" />
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Mechatronics Engineering Bachelor</p>
+                        <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">2022</p>
+                    </div>
                 </div>
             </div>
-            <div id="experience" class="row row-cols-3">
+            <div id="experience" class="row row-cols-3" style="margin-top: 10%;margin-bottom: 10%;">
                 <div class="col-md-2">
                     <div>
                         <h1 class="h2"
@@ -114,7 +112,7 @@
                     <p style="font-family: Inter; color: #F3F4F6FF;">Development</p>
                 </div>
             </div>
-            <div id="dev" class="row row-cols-2" style="margin-top: 5%;">
+            <div id="dev" class="row row-cols-2" style="margin-top: 5%; margin-bottom: 5%;">
                 <div class="col-md-5">
                     <img class="devlogo" alt="logo" src="./images/bx-code-block.svg" />
                 </div>
@@ -132,7 +130,7 @@
                         In database, I have experience working in MySQL, SQL, SQLite and MongoDB. </p>
                 </div>
             </div>
-            <div id="educationexp" class="row row-cols-2" style="margin-top: 5%;">
+            <div id="educationexp" class="row row-cols-2" style="margin-top: 5%; margin-bottom: 5%;">
                 <div class="col-md-5">
                     <img class="explogo" alt="logo" src="./images/genuinelogo.png" />
                 </div>
