--- a/AboutMe.html
+++ b/AboutMe.html
@@ -95,85 +95,102 @@
                 </div>
             </div>
             <div id="experience" class="row row-cols-3" style="margin-top: 10%;margin-bottom: 10%;">
-                <div class="col-md-2">
+                <div class="col-12 col-md-6">
                     <div>
                         <h1 class="h2"
                             style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF; padding-bottom: 2%;">
                             My Experience</h1>
                     </div>
                 </div>
-                <div class="col-md-2">
-                    <a href="#educationexp"><img class="book" alt="icon"
-                            src="./images/book-bookmark-regular-24.png" /></a>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">Education</p>
-                </div>
-                <div class="col-md-2">
-                    <a href="#dev"><img class="book" alt="icon" src="./images/code-alt-regular-24.png" /></a>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">Development</p>
-                </div>
+                <ul id="experience_header" class="col-8 col-md-6 d-flex justify-content-between justify-content-md-start">
+                    <li class="col-md-3 icons-interactions">
+                        <a href="#educationexp"><img class="book" alt="icon"
+                                src="./images/book-bookmark-regular-24.png" /></a>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">Education</p>
+                    </li>
+                    <li class="col-md-3 icons-interactions">
+                        <a href="#dev"><img class="book" alt="icon" src="./images/code-alt-regular-24.png" /></a>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">Development</p>
+                    </li>
+                </ul>
             </div>
-            <div id="dev" class="row row-cols-2" style="margin-top: 5%; margin-bottom: 5%;">
-                <div class="col-md-5">
-                    <img class="devlogo" alt="logo" src="./images/bx-code-block.svg" />
+            <div id="experience_content">
+                <div id="dev" class="row row-cols-1 row-cols-md-2 px-4" style="margin-top: 5%; margin-bottom: 5%; transform: scale(1);">
+                    <div class="row justify-content-center">
+                        <img class="explogo icons-interactions" alt="logo" src="./images/caminitolab_1_-_Copy-removebg-preview.png" />
+                    </div>
+                    <div>
+                        <h3>Fullstack Developer</h3>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">Since 2025</p>
+                        <br>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">From 2025, I'm working in a growing startup
+                            developing original projects in React, HTML, CSS, Vanilla JS and WordPress environment. Our most 
+                            recent project is Jinndo Radio, a platform developed and deployed under this environment using
+                            themes like Astra with customized features. Also, during all the process I'm in charge of SCRUM process, 
+                            requirements analysis and UX/UI design in Figma.</p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <img class="devlogo icons-interactions" alt="logo" src="./images/bx-code-block.svg" />
+                    </div>
+                    <div>
+                        <h3>Freelance Fullstack Developer</h3>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">Since 2021</p>
+                        <br>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">From 2021, I've been working in Software
+                            Development Industry, doing
+                            projects for different clients. Also, I've been working by my own in pages
+                            with different technologies and taking different courses to keep updated
+                            this industry. In frontend, I've done projects in React and Vue, and of
+                            course working in HTML and CSS, and in backend, different technologies in
+                            nodejs and frameworks like express, mongoose and MySQL, and SpringBoot.
+                            In database, I have experience working in MySQL, SQL, SQLite and MongoDB. </p>
+                    </div>
                 </div>
-                <div class="col-md-5">
-                    <h3>Freelance Fullstack Developer</h3>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">Since 2021</p>
-                    <br>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">From 2021, I've been working in Software
-                        Development Industry, doing
-                        projects for different clients. Also, I've been working by my own in pages
-                        with different technologies and taking different courses to keep updated
-                        this industry. In frontend, I've done projects in React and Vue, and of
-                        course working in HTML and CSS, and in backend, different technologies in
-                        nodejs and frameworks like express, mongoose and MySQL, and SpringBoot.
-                        In database, I have experience working in MySQL, SQL, SQLite and MongoDB. </p>
-                </div>
-            </div>
-            <div id="educationexp" class="row row-cols-2" style="margin-top: 5%; margin-bottom: 5%;">
-                <div class="col-md-5">
-                    <img class="explogo" alt="logo" src="./images/genuinelogo.png" />
-                </div>
-                <div class="col-md-5">
-                    <h3>Computer Science Head Professorship</h3>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">Since 2024</p>
-                    <br>
-                    <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">Since 2024, I have been working
-                        with this growing American institution, teaching young people between 13 and 18 years old the
-                        fundamentals of Computer Science (programming, augmented reality, software development in
-                        Python, HTML, CSS, JavaScript, among other technologies, as well as UI/UX design fundamentals
-                        and agile methodologies). Likewise, I am working on a research project on computational thinking
-                        with this institution, applying the areas explained above. </p>
-                </div>
+                <div id="educationexp" class="row row-cols-1 row-cols-md-2 px-4" style="margin-top: 5%; margin-bottom: 5%; transform: scale(1);">
+                    <div class="row justify-content-center">
+                        <img class="explogo icons-interactions" alt="logo" src="./images/genuinelogo.png" />
+                    </div>
+                    <div>
+                        <h3>Computer Science Head Professorship</h3>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">Since 2024</p>
+                        <br>
+                        <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">Since 2024, I have been working
+                            with this growing American institution, teaching young people between 13 and 18 years old the
+                            fundamentals of Computer Science (programming, augmented reality, software development in
+                            Python, HTML, CSS, JavaScript, among other technologies, as well as UI/UX design fundamentals
+                            and agile methodologies). Likewise, I am working on a research project on computational thinking
+                            with this institution, applying the areas explained above. </p>
+                    </div>
 
-                <div class="col-md-5">
-                    <img class="explogo" alt="logo" src="./images/logo2.png" />
-                </div>
-                <div class="col-md-5">
-                    <h3>Information, Communication and Technlogy Head Professorship</h3>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">2023</p>
-                    <br>
-                    <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">One of my most recent work
-                        experiences took place in 2023 with this prestigious institution, where I had the opportunity to
-                        teach young people of all ages about office automation concepts, programming (Scratch, mBlock,
-                        Python, HTML, JavaScript) and technological design, taught entirely in English as it is a
-                        bilingual institution, with a focus on the development of STEAM projects. </p>
-                </div>
-                <div class="col-md-5">
-                    <img class="explogo" alt="logo" src="./images/gimgalmas.png" />
-                </div>
-                <div class="col-md-5">
-                    <h3>Robotics Head Professorship</h3>
-                    <p style="font-family: Inter; color: #F3F4F6FF;">2022</p>
-                    <br>
-                    <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">For a year, I have been working
-                        hand in hand with this educational institution to promote teaching to young people of different
-                        ages in mechanical and electronic design and embedded programming with devices such as Arduino
-                        and HaloCode with mBlock and C as programming languages. It is carried out entirely in English
-                        as it is a bilingual institution under Norma's TecPro system, for which it has certification.
-                    </p>
-                </div>
+                    <div class="row justify-content-center">
+                        <img class="explogo icons-interactions" alt="logo" src="./images/logo2.png" />
+                    </div>
+                    <div>
+                        <h3>Information, Communication and Technlogy Head Professorship</h3>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">2023</p>
+                        <br>
+                        <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">One of my most recent work
+                            experiences took place in 2023 with this prestigious institution, where I had the opportunity to
+                            teach young people of all ages about office automation concepts, programming (Scratch, mBlock,
+                            Python, HTML, JavaScript) and technological design, taught entirely in English as it is a
+                            bilingual institution, with a focus on the development of STEAM projects. </p>
+                    </div>
+                    <div class="row justify-content-center">
+                        <img class="explogo icons-interactions" alt="logo" src="./images/gimgalmas.png" />
+                    </div>
+                    <div>
+                        <h3>Robotics Head Professorship</h3>
+                        <p style="font-family: Inter; color: #F3F4F6FF;">2022</p>
+                        <br>
+                        <p style="font-family: Inter; color: #F3F4F6FF; margin-bottom: 5%;">For a year, I have been working
+                            hand in hand with this educational institution to promote teaching to young people of different
+                            ages in mechanical and electronic design and embedded programming with devices such as Arduino
+                            and HaloCode with mBlock and C as programming languages. It is carried out entirely in English
+                            as it is a bilingual institution under Norma's TecPro system, for which it has certification.
+                        </p>
+                    </div>
 
+                </div>
             </div>
             <div id="languages">
                 <h1 class="h2" style="font-family: Arial, Helvetica, sans-serif; font-weight: 700; color: #F3F4F6FF;">
@@ -181,15 +198,15 @@
             </div>
             <div class="row align-items-center">
                 <div class="col">
-                    <img class="languageimg" alt="spanish" src="./images/spain_icon.png" />
+                    <img class="languageimg icons-interactions" alt="spanish" src="./images/spain_icon.png" />
                     <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Native competence</p>
                 </div>
                 <div class="col">
-                    <img class="languageimg" alt="english" src="./images/uk_icon.png" />
+                    <img class="languageimg icons-interactions" alt="english" src="./images/uk_icon.png" />
                     <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Professional competence (B2)</p>
                 </div>
                 <div class="col">
-                    <img class="languageimg" alt="portuguese" src="./images/brazil_icon.png" />
+                    <img class="languageimg icons-interactions" alt="portuguese" src="./images/brazil_icon.png" />
                     <p class="fs-6" style="font-family: Inter; color: #F3F4F6FF;">Beginner- intermediate level</p>
                 </div>
 
@@ -201,7 +218,7 @@
     <script src="./js/headerInjection.js"></script>
     <!--Load Header and Footer-->
     <script src="./js/components.js"></script>
-    <!--Basic interactions in JS.-->
-    <script src="./js/interactions.js"></script>
+    <!--Script for tabs interaction-->
+    <script src="./js/tabsNavigation.js"></script>
 </body>
 </html>
